--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: "3"
-services: 
-    redis-server:
-        image: "redis"
-    
+services:
+  redis-server:
+    image: "redis"
+    node-app:
+      build: .
+      ports:
+        - "5000:8081"
