--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "redis": "^3.0.2"
   },
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "node index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
