--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t rootfaheem/docker-lab -f Dockerfile.dev .
 
 script:
-  - docker run rootfaheem/docker-lab yarn run test -- --coverage
+  - docker run rootfaheem/docker-lab yarn run test --coverage
