--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
 before_install:
   - docker build -t rootfaheem/docker-lab -f Dockerfile.dev .
 
-script:
-  - docker run rootfaheem/docker-lab yarn run test --coverage
+# script:
+# - docker run rootfaheem/docker-lab yarn run test --coverage
 
 deploy:
   provider: elasticbeanstalk
