--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ services:
   - docker
 
 language: node_js
+node_js:
+  - 12.16.1
 
 before_install:
   - docker build -t rootfaheem/docker-lab -f Dockerfile.dev .
