--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,9 +1,12 @@
 version: "3.0"
 services:
-  redis-server:
-    image: "redis"
-  node-app:
+  web:
     restart: always
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
+    volumes:
+      - /app/node_modules
+      - .:/app
